--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- HOME SECTION -->
   <section id="home" class="home-section">
     <div class="profile-container">
-      <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic"/>
+      <img src="ImageS/profile.jpg" alt="Profile Picture" class="profile-pic"/>
       <h1 class="typing">Boitumelo Tseke</h1>
     </div>
     <p>Aspiring software developer. I enjoy coding, learning, and building projects that solve real problems 
